nginx works now

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 http {
-    upstream healthapp {
+    upstream logging {
         # Point to your API running on port 8080 inside the Docker network
         server loggingapi:8080;
     }
