nginx works for multible containers

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,15 @@
 http {
     upstream logging {
-        # Point to your API running on port 8080 inside the Docker network
-        server loggingapi:8080;
+        # Docker will resolve "loggingapi" to multiple replicas (containers)
+        server loggingapi:8080 max_fails=3 fail_timeout=30s;  
     }
 
     server {
-        # Listen on port 80 (the public port you will access)
+        # Listen on port 80 (publicly accessible)
         listen 80;
 
-        # Handle requests to the root of your API
+        # Forward requests to the upstream group
         location / {
-            # Forward requests to the upstream (your API)
             proxy_pass http://logging;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -18,9 +17,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Handle requests specifically for Swagger
+        # Forward Swagger requests to the upstream group
         location /swagger/ {
-            # Forward Swagger requests to your API upstream as well
             proxy_pass http://logging/swagger/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
